Screen Rendering Started 1.Added Canvas for screen emulation and related settings 2.Added Cpu class for emulation and disassembling 3.Added bios.gb 4.Added different colors for screen emulation 5.Changed default orientation of the app

--- a/app/src/main/res/layout/fragment_screen.xml
+++ b/app/src/main/res/layout/fragment_screen.xml
@@ -3,29 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <FrameLayout
-        android:id="@+id/screenLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/ic_launcher_splash"
-        android:clickable="false"
         android:keepScreenOn="true">
+
+        <ImageView
+            android:id="@+id/screenImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/screen"
+            app:srcCompat="@drawable/ic_launcher_splash" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/buttonOverlay"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="20dp">
+            android:layout_marginEnd="30dp">
 
             <TextView
                 android:id="@+id/startText"
                 style="@style/translucent"
                 android:layout_width="50dp"
                 android:layout_height="20dp"
-                android:alpha="0.3"
-                android:background="@android:color/background_dark"
-                android:gravity="center"
                 android:text="@string/start"
-                android:textColor="@android:color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.384"
@@ -38,11 +38,7 @@
                 style="@style/translucent"
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
-                android:alpha="0.3"
-                android:background="@android:color/background_dark"
-                android:gravity="center"
                 android:text="@string/select"
-                android:textColor="@android:color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.599"
@@ -55,11 +51,7 @@
                 style="@style/translucent"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:alpha="0.3"
-                android:background="@android:color/background_dark"
-                android:gravity="center"
                 android:text="@string/a"
-                android:textColor="@android:color/white"
                 android:textSize="30sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -73,11 +65,7 @@
                 style="@style/translucent"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:alpha="0.3"
-                android:background="@android:color/background_dark"
-                android:gravity="center"
                 android:text="@string/b"
-                android:textColor="@android:color/white"
                 android:textSize="30sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -91,11 +79,7 @@
                 style="@style/translucent"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:alpha="0.3"
-                android:background="@android:color/background_dark"
-                android:gravity="center"
                 android:text="@string/up"
-                android:textColor="@android:color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.882"
